--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: "14"
 
       - name: Install dependencies
-        run: npm install --workspaces
+        run: npm run install:all
 
       - name: Build frontend
         run: npm run build --workspace=frontend
@@ -39,6 +39,6 @@ jobs:
           script: |
             cd /var/www/ildidev
             git pull origin main
-            npm install --workspaces
+            npm run install:all
             npm run build --workspace=frontend
             pm2 restart all
