--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,10 +25,10 @@ jobs:
         run: npm run install:all
 
       - name: Build frontend
-        run: npm run build --workspace=frontend
+        run: npm run build:frontend
 
       - name: Run backend tests
-        run: npm test --workspace=backend
+        run: npm --prefix backend test
 
       - name: Deploy to DigitalOcean
         uses: appleboy/ssh-action@master
@@ -37,8 +37,8 @@ jobs:
           username: ${{ secrets.DROPLET_USER }}
           key: ${{ secrets.DROPLET_SSH_KEY }}
           script: |
-            cd /var/www/ildidev
+            cd /var/www/react-vite-deployment-test
             git pull origin main
             npm run install:all
-            npm run build --workspace=frontend
+            npm run build:frontend
             pm2 restart all
