--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "install:all": "npm install --workspaces",
-    "build:frontend": "npm run build --workspace=frontend",
-    "start:frontend": "npm run dev --workspace=frontend",
-    "start:backend": "npm start --workspace=backend",
+    "build:frontend": "npm --prefix frontend run build",
+    "start:frontend": "npm --prefix frontend run dev",
+    "start:backend": "npm --prefix backend start",
     "start:all": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
   },
   "workspaces": [
@@ -14,6 +14,6 @@
     "backend"
   ],
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.1"
   }
 }
