--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,8 +21,11 @@ jobs:
         with:
           node-version: "14"
 
-      - name: Install dependencies
-        run: npm run install:all
+      - name: Install frontend dependencies
+        run: npm install --prefix frontend
+
+      - name: Install backend dependencies
+        run: npm install --prefix backend
 
       - name: Build frontend
         run: npm run build:frontend
@@ -39,6 +42,7 @@ jobs:
           script: |
             cd /var/www/react-vite-deployment-test
             git pull origin main
-            npm run install:all
+            npm install --prefix frontend
+            npm install --prefix backend
             npm run build:frontend
             pm2 restart all
