--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,16 +22,21 @@ jobs:
           node-version: "14"
 
       - name: Install frontend dependencies
-        run: npm install --prefix frontend
+        run: sudo npm install --prefix frontend
 
       - name: Install backend dependencies
-        run: npm install --prefix backend
+        run: sudo npm install --prefix backend
+
+      - name: Adjust permissions
+        run: |
+          sudo chown -R $USER:$USER /var/www/react-vite-deployment-test/frontend/dist
+          sudo chmod -R 755 /var/www/react-vite-deployment-test/frontend/dist
 
       - name: Build frontend
-        run: npm run build:frontend
+        run: sudo npm run build:frontend
 
       - name: Run backend tests
-        run: npm --prefix backend test
+        run: sudo npm --prefix backend test
 
       - name: Deploy to DigitalOcean
         uses: appleboy/ssh-action@master
@@ -42,24 +47,14 @@ jobs:
           script: |
             cd /var/www/react-vite-deployment-test
             git pull origin main
-            echo "Installing frontend dependencies"
             sudo npm install --prefix frontend
-            if [ $? -ne 0 ]; then
-              echo "Failed to install frontend dependencies"
-              exit 1
-            fi
-            echo "Installing backend dependencies"
             sudo npm install --prefix backend
-            if [ $? -ne 0 ]; then
-              echo "Failed to install backend dependencies"
-              exit 1
-            fi
-            echo "Building frontend"
-            npm run build:frontend
+            sudo chown -R $USER:$USER /var/www/react-vite-deployment-test/frontend/dist
+            sudo chmod -R 755 /var/www/react-vite-deployment-test/frontend/dist
+            sudo npm run build:frontend
             if [ $? -ne 0 ]; then
               echo "Failed to build frontend"
               exit 1
             fi
-            echo "Restarting PM2 processes"
             pm2 restart all
             pm2 logs
