--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "nodemailer": "^6.9.14",
     "sanitize-html": "^2.13.0"
   }
 }
