--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,14 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.9.0",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^7.3.1",
+    "helmet": "^7.1.0",
     "nodemailer": "^6.9.14",
     "sanitize-html": "^2.13.0"
   }
