--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "dompurify": "^3.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5"
+    "react-helmet-async": "^2.0.5",
+    "react-vanilla-tilt": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
