--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "dompurify": "^3.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flickity-component": "^4.0.7",
     "react-helmet-async": "^2.0.5",
     "react-vanilla-tilt": "^1.0.0"
   },
